--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                                     <p>
                                         Our website offers comprehensive web development courses that cover HTML, CSS, JavaScript, and more. Learn from industry experts and acquire the skills to build professional-grade websites and applications.
                                     </p>
-                                    <a href="" class="btn-get-started">Get Started</a>
+                                    <a href="https://wa.me/7330637595?text= Hi, I want to join Web Devlopment Course On Majoring. " target="_blank" class="btn-get-started">Get Started</a>
                                 </div>
                             </div>
                         </div>
