--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                                     <p>
                                         Our website provides top-notch app development courses covering programming languages, frameworks, and tools like Swift, Kotlin, React Native, and more.Acquire the skills to create engaging and user-friendly mobile apps that meet the demands of today's rapidly growing app industry.
                                     </p>
-                                    <a href="" class="btn-get-started">Get Started</a>
+                                    <a href="https://wa.me/7330637595?text= Hi, I want to join App Devlopment Course On Majoring. " target="_blank" class="btn-get-started">Get Started</a>
                                 </div>
                             </div>
                         </div>
@@ -96,10 +96,10 @@
                             <div class="carousel-background"><img src="img/slider-3.jpg" alt=""></div>
                             <div class="carousel-container">
                                 <div class="carousel-content">
-                                    <h2>Game Development</h2>
+                                    <h2>Game Devlopment</h2>
                                     <p>
                                         Our website offers comprehensive game development courses covering Unity, C#, game design, and more.Explore the world of game development with our expert-led courses on game engines, programming, and design. Master the art of game creation and unleash your creativity with our diverse curriculum.
-                                    <a href="" class="btn-get-started">Get Started</a>
+                                    <a href="https://wa.me/7330637595?text= Hi, I want to join Game Devlopment Course On Majoring. " target="_blank" class="btn-get-started">Get Started</a>
                                 </div>
                             </div>
                         </div>
