--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
         <meta charset="utf-8">
         <title>Majoring</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
-        <meta content="" name="keywords">
-        <meta content="" name="description">
+        <meta name="keywords" content="MajoringLearn, majoringlearn.com, www.majoringlearn.com, online courses majoring, programming, Java, Python, JavaScript">
+        <meta name="description" content="MajoringLearn offers online programming courses for beginners and advanced learners. Learn Java, Python, JavaScript and other popular programming languages with our comprehensive courses.">
+
 
         <!-- Favicons -->
         <link href="img/favicon.ico" rel="icon">
