--- a/contact.html
+++ b/contact.html
@@ -88,7 +88,9 @@
                         <div class="contact-address">
                             <i class="ion-md-pin"></i>
                             <h3>Address</h3>
-                            <address>Shiva Sai, Andhra Pradesh, India</address>
+                            <address>Rd Number 6, Nagarjuna Colony, Balaji Colony Phase 1,<br>
+                                Hastinapuram, Hyderabad, <br>
+                                Telangana 500070<br></address>
                         </div>
                     </div>
 
