--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>Majoring</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
-        <meta name="keywords" content="majoring, Majoring,MajoringLearn, majoringlearn.com, www.majoringlearn.com, online courses majoring, programming, Java, Python, JavaScript">
+        <meta name="keywords" content="majoring.com,www.majoring.com, www.Majoring.com,www.Majoringlearn.com, majoringlearn.com, www.majoringlearn.com, online courses majoring, programming, Java, Python, JavaScript">
         <meta name="description" content="MajoringLearn offers online programming courses for beginners and advanced learners. Learn Java, Python, JavaScript and other popular programming languages with our comprehensive courses.">
 
 
